add tomer to gameGallery

--- a/Includes/GameGallery.html
+++ b/Includes/GameGallery.html
@@ -9,14 +9,13 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-
     <link rel="stylesheet" type="text/css" href="../CSS/APEStyle.css">
-    <div id="headerph"></div>
     
 </head>
 
 <body>
-
+	<div id="headerph"></div>
+	<h1> Tomer </h1>
         <div> 
             <!--Game Gallery Intro-->
             <div class="container container2_2">
