--- a/Includes/Homescreen.html
+++ b/Includes/Homescreen.html
@@ -18,7 +18,7 @@
     <!--Cart Intro-->
     <div class="container container2_2">
         <center>
-            <h1>Welcom to APE Gaming NIR WAS HERE</h1>
+            <h1>Welcom to APE Gaming</h1>
             <img src ="../logo copy.png" style="width: 40%;"><br>
             <h3>Consoles or PC -  APE Gaming is here to serve. <br>Join our community and find game reviews, podcasts, and the latest games available for purchase!</h3>
         </center>            
