everything from thrsday

--- a/Includes/header.html
+++ b/Includes/header.html
@@ -29,14 +29,12 @@
                         <a class="nav-link" href="Podcasts.html" style="margin-top: 8px; margin-right: 20px;">Podcasts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Reviews.html" style="margin-top: 8px; margin-right: 20px;">Reviews</a>
+                        <a class="nav-link" href="Reviews.php" style="margin-top: 8px; margin-right: 20px;">Reviews</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Cart.html" style="margin-top: 8px; margin-right: 20px;">Cart</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Reviews.php" style="margin-top: 8px; margin-right: 20px;">php</a>
-                    </li>
+
                 </ul>
             </div>
         </nav>
