--- a/CSS/APEStyle.css
+++ b/CSS/APEStyle.css
@@ -117,3 +117,12 @@ img{
     width:95%;
 
 }
+
+.lolo{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    width:30%;
+    display: block;
+}
