--- a/Includes/Cart.html
+++ b/Includes/Cart.html
@@ -21,7 +21,7 @@
             <div class="container container2_2">
                 <center>
                     <h1>Thank you for shopping with us!</h1>
-                    <img src ="../Images/makeitrain.gif" style="width: 40%;">
+                    <img src ="../Images/makeitrain.gif" style="width: 30%;">
                 </center>            
             </div>
             <div class="container container2 container4">
@@ -33,9 +33,9 @@
                             <img alt ="Game" class="img2" src="../Images/PRO21.jpg">
                         </div>
                         <div class ="col-lg-6" style="display: block;">
-                            <h3>Cyberpunk 2077</h3>
+                            <h3>Pro Evolution Soccer 2021</h3>
                             <p>
-                                <b>Description:</b> <br> This is a great game, you should play it!<br>
+                                <b>Description:</b> <br>In 2021, You'll want to play this one!<br>
                                 <b>Price:</b> <br>$50.00<br><br>
                                 <b>Quantity:</b>
                                 <input  oninput="total()" style="margin-top: 4px;" id="q1" class="input-group-text" type="number" value=1 min=0 max=10>                          
@@ -43,10 +43,10 @@
                         </div>
                         <hr class ="solid" style = "border-top: 3px solid #bbb; width:90%; ">
                         <div class="col-lg-6">
-                            <img alt ="Game" class="img2" src="../Images/PRO21.jpg">
+                            <img alt ="Game" class="img2" src="../Images/Crash Bandicoot 4.jpeg" style="margin-bottom: 10px;">
                         </div>
                         <div class ="col-lg-6" style="display: block;">
-                            <h3>Cyberpunk 2077</h3>
+                            <h3>Crash Bandicoot 4</h3>
                             <p>
                                 <b>Description:</b> <br> This is a great game, you should play it!<br>
                                 <b>Price:</b> <br>$50.00<br><br>
