Homescreen - up2date

--- a/Includes/Homescreen.html
+++ b/Includes/Homescreen.html
@@ -21,68 +21,38 @@
         </center>            
     </div>
 
-    <!--Game exclusives-->
-    <div class="container container2 container4">
-                <img alt="exclusives" src="../exclusives.png" class="center">
+    <!--Game Gallery-->
+    <div class = "row">
+        <div class="container container2 container4 col-lg-3">
+            <center>
+                <div class = "game">
+                    <h2>Our Game Reviews</h2>
+                    <img class="" alt="XBOX" src="../Images/GR.jpeg" style="max-width: 100%; border-radius: 20px; display: block;">
+                    
+                    <br><button onclick="window.location.href='Reviews.php'" type="button" id="gr" class="btn btn-info" style="margin-bottom: 15px; font-size: 20pt; width:70%;">View All Reviews</button><br>
+                </div>
+            </center>
+        </div>
+        <div class="container container2 container4 col-lg-3">
+            <center>
+                <div class = "game">
+                    <h2>Our Game Gallery</h2>
+                    <img class="" alt="XBOX" src="../Images/GG.jpeg" style="max-width: 100%; border-radius: 20px; display: block;">
+                    <br><button onclick="window.location.href='GameGallery.html'" type="button" id="gg" class="btn btn-info" style="margin-bottom: 15px; font-size: 20pt; width:70%;">View All Games</button>                    <br>
+                </div>
+            </center>
+        </div>
+        <div class="container container2 container4 col-lg-3">
+            <center>
+                <div class = "game">
+                    <h2>Our Game Podcasts</h2>
+                    <img class = "" alt="XBOX" src="../Images/GP.jpeg" style="max-width: 100%; border-radius: 20px;display: block;">
+                    
+                    <br><button onclick="window.location.href='Podcasts.html'"  type="button" id="gp" class="btn btn-info" style="margin-bottom: 15px; font-size: 20pt; width:70%;">View All Podcasts</button><br>
+                </div>
+            </center>
+        </div>
         
-        <div class="row">
-            <div class="col-md-5" style="margin-right: auto; margin-left: auto; margin-top: auto">
-
-                <a href="#">
-                    <img alt="PlayStation5" src="../PS5_Exclusives.png" width=100% height=100%>
-                </a>
-            </div>
-            <div class="col-md-5" style="margin-right: auto;  ">
-
-                <a href="#">
-                    <img alt="XBOX" src="../XBOX_Exclusives.png" width=100% height=100%>
-                </a>
-            </div>
-        </div>
-    </div>
-    <!--Game Reviews-->
-    <div class="container container2 add-topp" style="padding-bottom: 25px; padding-left:3%; padding-right: 3%;">
-        <img alt="exclusives" src="../reviews.png" class="center">
-        <div class="row add-topp container3">
-            
-            
-            <div class="col-lg-3">
-                <img class="img2" alt="GTA V" src="https://images-na.ssl-images-amazon.com/images/I/81Ow0EK3azL._SL1500_.jpg" width=100% height=100%>
-            </div>
-            <div class="col-md-9">
-                <h1>GTA V</h1>
-                <h2>Score: 9.7/10</h2>
-                <p>
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                </p>
-            </div>
-        </div>
-        <div class="row add-topp container3">
-            <div class="col-lg-3">
-                <img class="img2" alt="GTA V" src="https://images-na.ssl-images-amazon.com/images/I/81Ow0EK3azL._SL1500_.jpg" width=100% height=100%>
-            </div>
-            <div class="col-md-9">
-                <h1>GTA V</h1>
-                <h2>Score: 9.7/10</h2>
-                <p>
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                </p>
-            </div>
-        </div>
-
-        <div class="row add-topp container3">
-            <div class="col-lg-3">
-                <img class="img2" alt="GTA V" src="https://images-na.ssl-images-amazon.com/images/I/81Ow0EK3azL._SL1500_.jpg" width=100% height=100%>
-            </div>
-            <div class="col-md-9">
-                <h1>GTA V</h1>
-                <h2>Score: 9.7/10</h2>
-                <p>
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                </p>
-            </div>
-        </div>
-
     </div>
 
     <script type="text/javascript">
