--- a/Includes/Games-th.html
+++ b/Includes/Games-th.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>APE Gaming - Cyberpunk 2077</title>
+<title>APE Gaming - Tony Hawk 1+2</title>
 
 <head>
     <meta charset="utf-8">
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-        <!--Games Filter-->
         <!--Games screen-->
         <div>
             <!--Game exclusives-->
@@ -24,20 +23,19 @@
                 <!--specific game-->
                 <div class="row">
                     <div class="col-lg-5 gameframe">
-                        <img class ="new" alt="XBOX" src="../XBOX_Exclusives.png" width=100% height=100% >
+                        <img class ="new" alt="XBOX" src="../Images/Tony Hawk Pro Skater 1+2.jpg" width=100% height=100% >
                     </div>
                     <div class="col-md-6 gameframe">
-                        <h1>Cyberpunk 2077</h1>
+                        <h1>Tony Hawk Pro Skater 1+2 (Remastered)</h1>
                         <p>
                             <b><u>Consoles:</u></b> <br>PS4, Xbox, PC<br><br>
-                            <br><b><u>Description:</u></b></br> <br>Cyberpunk 2077 is an open-world, action-adventure story set in Night City, a megalopolis obsessed with power, glamour and body modification. You play as V, a mercenary outlaw going after a one-of-a-kind implant that is the key to immortality. You can customize your character’s cyberware, skillset and playstyle, and explore a vast city where the choices you make shape the story and the world around you.<br>
+                            <br><b><u>Description:</u></b></br>Drop Back In With The Most Iconic Skateboarding Games Ever Made Skate as the legendary Tony Hawk and the original pro roster, plus new pros. Listen to songs from the era-defining soundtrack along with new music. Hit insane trick combos with the iconic handling of the Tony Hawk’s™ Pro Skater™ series. All The Original Game Modes And More Play all the original modes and go head-to-head with local 2-Player modes. Show off your style and creativity with upgraded Create-A-Park and Create-A-Skater features. Compete against players from around the world in Multiplayer modes and leaderboards.<br>
                             <div class="input-group">
-                                <div class="input-group-text" style="background-color:rgb(178, 167, 230);"><b>Price: $50.00</b></div><br>
+                                <div class="input-group-text" style="background-color:rgb(178, 167, 230);"><b>Price: $40.00</b></div><br>
                             </div><br>
-                            <button type=onclick class="btn btn-dark">Add to cart!</button>
-                        </p>
-
-
+                            <a href="Cart.html">
+                                <button onclick="alt()" class="btn btn-dark">Add to cart!</button>
+                            </a>                        </p>
                     </div>
                 </div>
             </div>
@@ -55,6 +53,9 @@
         $(function(){
             $("#footerph").load("footer.html");
         });
+        function alt(){
+            window.alert("Item successfully added to cart! you will now be redirected to it.")
+        }
         </script>
 </body>
 
