--- a/Includes/GameGallery.html
+++ b/Includes/GameGallery.html
@@ -31,108 +31,116 @@
             <div class = "row">
                 <div class="container container2 container4 col-lg-3">
                     <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/Crash Bandicoot 4.jpeg" style="display: block;">
-                            <br>Crash Bandicoot 4<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
+                        <a href="Games-cp.html">
+                            <div style="color:black;" class = "game">
+                                    <img class="img2" alt="XBOX" src="../Images/cbp.jpg" style="display: block;">
+                                <br>Cyberpubk 2077<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$60.00</b></div><br>
+                            </div>
+                        </a>
                     </center>
                 </div>
                 <div class="container container2 container4 col-lg-3">
                     <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/PRO21.jpg" style="display: block;">
-                            <br>Pro Evolution Soccer 2021<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
+                        <a href="Games-gta.html">
+                            <div style="color:black;" class = "game">
+                                <img class="img2" alt="XBOX" src="../Images/GTAV.jpg" style="display: block;">
+                                <br>Grand Theft Auto V<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
+                            </div>
+                        </a>
                     </center>
                 </div>
                 <div class="container container2 container4 col-lg-3">
                     <center>
-                        <div class = "game">
-                            <img class = "img2" alt="XBOX" src="../Images/Ride4.jpg" style="display: block;">
-                            <br>Ride4<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
+                       <a href="Games-th.html">
+                            <div style="color:black;" class = "game">
+                                <img class = "img2" alt="XBOX" src="../Images/Tony Hawk Pro Skater 1+2.jpg" style="display: block;">
+                                <br>Tony Hawk Pro Skater 1+2<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$40.00</b></div><br>
+                            </div>
+                       </a>
                     </center>
                 </div>
                 
             </div>
             <!--Row 2-->
-            <div class = "row">
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/Sims4.jpg" style="display: block;">
-                            <br>Sims 4<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
+            <div id ="nom" onclick="nom()">
+                <div class = "row">
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class="img2" alt="XBOX" src="../Images/Sims4.jpg" style="display: block;">
+                                <br>Sims 4<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$27.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class="img2" alt="XBOX" src="../Images/Avengers.jpg" style="display: block;">
+                                <br>Avengers<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$19.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class = "img2" alt="XBOX" src="../Images/Pokemon.jpg" style="display: block;">
+                                <br>Pokemon Shield and Sword<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$60.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>
+                    
                 </div>
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/Avengers.jpg" style="display: block;">
-                            <br>Avengers<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
+                <!--Row 3-->
+                <div class = "row">
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class="img2" alt="XBOX" src="../Images/COD Black Ops.jpg" style="display: block;">
+                                <br>Call Of Duty - Black Ops<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$44.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class="img2" alt="XBOX" src="../Images/Star Wars Squadrons.jpg" style="display: block;">
+                                <br>Star Wars Squadrons<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$27.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class = "img2" alt="XBOX" src="../Images/Fallout 76.jpg" style="display: block;">
+                                <br>Fallout 76<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$39.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>
+                    
                 </div>
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class = "img2" alt="XBOX" src="../Images/Pokemon.jpg" style="display: block;">
-                            <br>Pokemon Shield and Sword<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
+                <!--Row 4-->
+                <div class = "row">
+                    <div class="container container2 container4 col-lg-3">
+                        <center>
+                            <div class = "game">
+                                <img class="img2" alt="XBOX" src="../Images/Ride4.jpg" style="display: block;">
+                                <br>Ride 4<br>
+                                <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$30.00</b></div><br>
+                            </div>
+                        </center>
+                    </div>              
                 </div>
                 
             </div>
-            <!--Row 3-->
-            <div class = "row">
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/COD Black Ops.jpg" style="display: block;">
-                            <br>Call Of Duty - Black Ops<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
-                </div>
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/Star Wars Squadrons.jpg" style="display: block;">
-                            <br>Star Wars Squadrons<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
-                </div>
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class = "img2" alt="XBOX" src="../Images/Fallout 76.jpg" style="display: block;">
-                            <br>Fallout 76<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
-                </div>
-                
-            </div>
-            <!--Row 4-->
-            <div class = "row">
-                <div class="container container2 container4 col-lg-3">
-                    <center>
-                        <div class = "game">
-                            <img class="img2" alt="XBOX" src="../Images/Tony Hawk Pro Skater 1+2.jpg" style="display: block;">
-                            <br>Tony Hawk Pro Skater 1+2<br>
-                            <div class="input-group-text center" style="background-color:rgb(178, 167, 230); font-size: 20pt;"><b>$50.00</b></div><br>
-                        </div>
-                    </center>
-                </div>              
-            </div>
-
         </div>
         
 
@@ -143,6 +151,10 @@
         $(function(){
             $("#footerph").load("footer.html");
         });
+
+        function nom(){
+            window.alert("Action not supported in the project's scope.");
+        };
         </script>
         <div id="footerph"></div>
 </body>
