--- a/Includes/Single Podcast.html
+++ b/Includes/Single Podcast.html
@@ -60,7 +60,7 @@
 
         </div>
 
-        <div class = "row">
+        <div onclick = "nom()" class = "row">
             <div class="container container2 container4">
                 <center>
                     <br>
@@ -93,6 +93,9 @@
         $(function(){
             $("#footerph").load("footer.html");
         });
+        function nom(){
+            window.alert("Action not supported in the project's scope.");
+        };
         </script>
     
 </body>
