--- a/Includes/Cart.html
+++ b/Includes/Cart.html
@@ -71,30 +71,8 @@
             </div>
 
         </div>
-        
+    <script type="text/javascript" src="../JS/GJS.js"></script>
 
-    <script type="text/javascript">
-        $(function(){
-            $("#headerph").load("header.html");
-        });
-        $(function(){
-            $("#footerph").load("footer.html");
-        });
-        </script>
-    
-    <script>
-        function total(){
-            var A = 50.00;
-            var B = document.getElementById("q1").value;
-            var C = document.getElementById("q2").value;
-            document.getElementById("demo").innerHTML = B*A + C*A;
-        }
-        
-        function nom(){
-            window.alert("Action not supported in the project's scope.");
-        };
-
-    </script>
 </body>
 
 <div id="footerph"></div>
