--- a/Includes/GameGallery.html
+++ b/Includes/GameGallery.html
@@ -143,20 +143,9 @@
             </div>
         </div>
         
+    <script type="text/javascript" src="../JS/GJS.js"></script>
 
-    <script type="text/javascript">
-        $(function(){
-            $("#headerph").load("header.html");
-        });
-        $(function(){
-            $("#footerph").load("footer.html");
-        });
-
-        function nom(){
-            window.alert("Action not supported in the project's scope.");
-        };
-        </script>
-        <div id="footerph"></div>
+    <div id="footerph"></div>
 </body>
 
 
