--- a/Includes/Homescreen.html
+++ b/Includes/Homescreen.html
@@ -58,36 +58,12 @@
         <center>
             <h3 style="color:cornsilk">Need some change in your life? Try our Home-Screen in different colors!</h3>
             <button onclick="changebg1()" type="button" class="btn btn-secondary">Original</button>
-            <button onclick="changebg2()" type="button" class="btn btn-secondary">Yellow Submarine</button>
-            <button onclick="changebg3()" type="button" class="btn btn-secondary">Blue Ocean</button>
+            <button onclick="changebg2()" type="button" class="btn btn-secondary">The Green Submarine</button>
+            <button onclick="changebg3()" type="button" class="btn btn-secondary">Laugh Out Loud</button>
         </center>
     </div>
 
-    <script type="text/javascript">
-        $(function(){
-            $("#headerph").load("header.html");
-        });
-        $(function(){
-            $("#footerph").load("footer.html");
-        });
-
-        function changebg1(){
-            $('body').css('background-image', 'url("../background.jpg")');
-        }
-
-        function changebg2(){
-            $('body').css('background-image', 'url("../Images/bg2.jpg")');
-        }
-
-        function changebg3(){
-            $('body').css('background-image', 'url("../Images/bg3.jpg")');
-        }
-
-    </script>
-
+    <script type="text/javascript" src="../JS/GJS.js"></script>
 </body>
-
 <div id="footerph"></div>
-
-
 </html>
