--- a/Includes/Podcasts.html
+++ b/Includes/Podcasts.html
@@ -68,27 +68,8 @@
             </div>
 
         </div>
-        
+    <script type="text/javascript" src="../JS/GJS.js"></script>
 
-    <script type="text/javascript">
-        $(function(){
-            $("#headerph").load("header.html");
-        });
-        $(function(){
-            $("#footerph").load("footer.html");
-        });
-
-        $("#pd1").click(function(){
-            window.location.href='Single Podcast.html';
-        });
-
-        var canvas = document.getElementById("canvas");
-        var ctx=canvas.getContext("2d");
-        ctx.font="30px Comic Sans MS";
-        ctx.fillStyle = "black";
-        ctx.textAlign = "center";
-        ctx.fillText("Our Game Podcasts", canvas.width/2, canvas.height/2);
-    </script>
 
 </body>
 
