--- a/Includes/Games-th.html
+++ b/Includes/Games-th.html
@@ -45,18 +45,8 @@
             </div>
         </div>
         
+        <script type="text/javascript" src="../JS/GJS.js"></script>
 
-    <script type="text/javascript">
-        $(function(){
-            $("#headerph").load("header.html");
-        });
-        $(function(){
-            $("#footerph").load("footer.html");
-        });
-        function alt(){
-            window.alert("Item successfully added to cart! you will now be redirected to it.")
-        }
-        </script>
 </body>
 
 <div id="footerph"></div>
