--- a/Includes/Single Podcast.html
+++ b/Includes/Single Podcast.html
@@ -86,17 +86,9 @@
         </div>
         
 
-    <script type="text/javascript">
-        $(function(){
-            $("#headerph").load("header.html");
-        });
-        $(function(){
-            $("#footerph").load("footer.html");
-        });
-        function nom(){
-            window.alert("Action not supported in the project's scope.");
-        };
-        </script>
+
+        <script type="text/javascript" src="../JS/GJS.js"></script>
+
     
 </body>
 
