--- a/Includes/Podcasts.html
+++ b/Includes/Podcasts.html
@@ -31,7 +31,7 @@
                 <br>
                 <div class="container6 row" id="single podcast">
                     <div class="btn col-sm-2" style="margin: auto; cursor:alias;">
-                        <img id="pd1" class="center center5" src="../images/Abba.png" style=" width: 150px; border-radius: 50%;">   
+                        <img id="pd1" class="center center5" src="../Images/Abba.png" style=" width: 150px; border-radius: 50%;">   
                     </div>
                     <div class="col-lg-10">
                         <h3>Gaming with APE - Assaf, Pearl and Elor discuss hookers and drugs</h3>
@@ -43,7 +43,7 @@
                 <br>
                 <div class="container6 row" id="single podcast">
                     <div class="col-sm-2" style="margin: auto;">
-                        <img class="center center5" src="../images/Abba.png" style="width: 150px; border-radius: 50%;">
+                        <img class="center center5" src="../Images/Abba.png" style="width: 150px; border-radius: 50%;">
                     </div>
                     <div class="col-lg-10">
                         <h3>Gaming with APE - Pearl solo masturbation on latest NBA, featuring Dani Avdja</h3>
@@ -55,7 +55,7 @@
                 <br>
                 <div class="container6 row" id="single podcast">
                     <div class="col-sm-2" style="margin: auto;">
-                        <img class="center center5" src="../images/Abba.png" style="width: 150px; border-radius: 50%;">
+                        <img class="center center5" src="../Images/Abba.png" style="width: 150px; border-radius: 50%;">
                     </div>
                     <div class="col-lg-10">
                         <h3>Unboxing with APE - Unboxing the new PS5 headset</h3>
