--- a/Includes/Cart.html
+++ b/Includes/Cart.html
@@ -11,7 +11,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="../CSS/APEStyle.css">
-    <div id="headerph"></div>
+    <div id="headerph" onload="cartBold()"></div>
     
 </head>
 
@@ -71,6 +71,9 @@
             </div>
 
         </div>
+        <script>
+            
+        </script>
     <script type="text/javascript" src="../JS/GJS.js"></script>
 
 </body>
