--- a/Includes/GameGallery.html
+++ b/Includes/GameGallery.html
@@ -40,7 +40,7 @@
                     <label style="border-radius: 15px;" class="btn btn-outline-primary" for="btnc2">$40-$49</label>
                   
                     <input type="checkbox" class="btn-check" id="btnc3" autocomplete="off" checked="true">
-                    <label style="border-radius: 15px;" class="btn btn-outline-primary" for="btnc3">$50</label>
+                    <label style="border-radius: 15px;" class="btn btn-outline-primary" for="btnc3">+$50</label>
                     <br>
                     <button type="button" class="btn btn-success" id="btnall" style="margin-bottom:10px; border-radius: 15px;" >Clear Filter</button>
                   </div>
@@ -159,6 +159,9 @@
                 </div>
                 
             </div>
+            <br>
+            <button onclick="scrollToTop()" style="margin-bottom:1px;" class="center btn btn-outline-light" type="button">Back to top</button>
+
         </div>
         
         <script>
