--- a/Includes/header.html
+++ b/Includes/header.html
@@ -16,11 +16,12 @@
 <body>
 
     <!--Navigation Bar -->
+    
         <nav class="navbar navbar-default navbar-fixed-top navbar-expand-sm navbar-dark bg-dark" id="header">
             <div class="container navbar navbar-dark bg-dark navbar-expand-lg">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="navbar-brand" href="Homescreen.html"><img alt="logo" src=../Images/logosm.png></a>
+                        <a class="navbar-brand" href="Homescreen.html"><img alt="logo" src="../Images/logosm.png"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="GameGallery.html" style="margin-top: 8px; margin-right: 20px;">Game Gallery</a>
